2000-07-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 12237: Src/hist.c, Src/lex.c: slightly improved (z) flag for
 	parsing conditions; recognising glob flags in conditions still
 	doesn't work
	
2000-07-12  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 12231: Completion/Core/compinstall: fix setting of list-prompt.

2000-07-12  Sven Wischnowsky  <wischnow@zsh.org>

	* 12229: Doc/Zsh/compsys.yo: fix for list-prompt docs
	
	* 12228: Src/hist.c, Src/lex.c: fix for (z) flag, don't take # as
 	comment
	
2000-07-12  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 12227: Completion/Core/compinstall: add select-prompt handling
	and correct menu entry and missing local parameters.

2000-07-12  Sven Wischnowsky  <wischnow@zsh.org>

	* 12226: Completion/Core/_main_complete: don't start menu
 	selection with only select=long
	
	* 12225: Completion/Linux/_rpm: check if options were completed
	
2000-07-11  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 12222: Src/exec.c: ignore EINTR in helper processe for
	tee and cat with multios.  It might be considered unfortunate
	that the shell is liable to exit on SIGPIPE if these disappear
	early.

	* 12220: Src/exec.c: print error message for unfound autoload
	function body at lower locallevel.

2000-07-10  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Completion/User/_killall: Complete process IDs and
	names for all processes when EUID is 0 (root); suggested by
	Thomas Kohler in 12202 and followups.

2000-07-10  Sven Wischnowsky  <wischnow@zsh.org>

	* 12208: Completion/Core/_path_files: avoid insertion of `+'
 	before ~1/<TAB>; don't use undeclared local $tmp
	
2000-07-08  Tanaka Akira  <akr@zsh.org>

	* 12201: Completion/User/_java: fix completion for jar. complete
	package qualified class names. fix typos.

2000-07-07  Bart Schaefer  <schaefer@brasslantern.com>

	* 12193: configure.in, Src/Builtins/rlimits.mdd: Fix unnecessary
	rebuilds of rlimits.o on platforms where getrlimit() is not found.
