@@ -1,5 +1,7 @@
 2000-07-13  Sven Wischnowsky  <wischnow@zsh.org>
 
+	* 12238: Src/Zle/zle_thingy.c: fix zle widget -n num with num>9
+	
 	* 12237: Src/hist.c, Src/lex.c: slightly improved (z) flag for
  	parsing conditions; recognising glob flags in conditions still
  	doesn't work
